--- a/apph5/pages/input/App.css
+++ b/apph5/pages/input/App.css
@@ -9,7 +9,7 @@
 }
 
 .title {
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: bold;
 	width: 100%;
 	flex-basis: 100%;
@@ -17,7 +17,10 @@
 	height: 36px;
 	line-height: 36px;
 	margin: 0;
+	padding: 0 10px;
 	background-color: #fff;
+	display: flex;
+	justify-content: space-between;
 }
 
 .right-screen {
